SERVER-32002 rename serverStatus "compressed" section to "compressor"

(cherry picked from commit cc91db020cd02b077aa77be08d23ea506bf20416)