src/mongo/transport/message_compressor_base.h
@@ -89,28 +89,28 @@ public:
     /*
      * This returns the number of bytes passed in the input for compressData
      */
-    int64_t getCompressedBytesIn() const {
+    int64_t getCompressorBytesIn() const {
         return _compressBytesIn.loadRelaxed();
     }
 
     /*
      * This returns the number of bytes written to output for compressData
      */
-    int64_t getCompressedBytesOut() const {
+    int64_t getCompressorBytesOut() const {
         return _compressBytesOut.loadRelaxed();
     }
 
     /*
      * This returns the number of bytes passed in the input for decompressData
      */
-    int64_t getDecompressedBytesIn() const {
+    int64_t getDecompressorBytesIn() const {
         return _decompressBytesIn.loadRelaxed();
     }
 
     /*
      * This returns the number of bytes written to output for decompressData
      */
-    int64_t getDecompressedBytesOut() const {
+    int64_t getDecompressorBytesOut() const {
         return _decompressBytesOut.loadRelaxed();
     }
 
